fixed sign in button showing up behind text

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -15,15 +15,14 @@ h1+small:hover a.btn { display:inline; position:absolute; right:0; top:-.4em; }
 
 #signin { margin-top:5.5em; padding:0 8em 1em 7em; white-space:nowrap; height:2.6em; }
 #write #signin { position:relative; float:right; top:1em; margin:0; }
-#signin-button { background:url('../images/browserid.png') no-repeat; min-width:79px; min-height:22px; cursor:pointer; border:none; box-shadow:none; }
 body#welcome .content, body#signup .content { height:33em; }
 #steps { position:absolute; top:18.5em; }
 .step, .step.done, .step.done:hover { opacity:.5; position:relative; }
 .step.active, .step:hover { opacity:1; }
 .step.signin #email { margin:4em 0 .5em; width:10em; }
-.step.signin #signin-button { margin:4em 0 .5em .5em; }
-.step.signin #allow-button { margin:4em 0 .5em; }
-.step.signin #signin-checking { position:absolute; margin:4.5em 0 .5em .5em; background:url('../images/loading.gif') no-repeat; padding-left:1.5em; }
+.step.signin #signin-button { position:absolute; margin:4em 0 .5em .5em; background:url('../images/browserid.png') no-repeat; min-width:79px; min-height:22px; cursor:pointer; border:none; box-shadow:none; }
+.step.signin #allow-button { position:absolute; margin:4em 0 .5em; }
+.step.signin #signin-checking { position:absolute; margin:4.5em 0 .5em .5em; background:url('../images/loading.gif') no-repeat; padding-left:1.5em; white-space:nowrap; }
 .step.remotestorage img, .step.write img { position:relative; left:28%; }
 .step.remotestorage img { margin:3em 0 .5em; }
 .step.write img { margin-top:1em; }
